<resources>

    <string name="app_name">Spotchu</string>
    <string name="camera">Camera</string>
    <string name="no_internet">Internet not available.</string>
    <string name="registration_failed">Login Failed, Please try again.</string>
    <string name="app_incompatible">Play Services not found, Please install to use Spotchu.</string>
	<string name="spot_being_uploaded">Spot upload in progress.</string>
	<string name="spot_posted">Spot posted successfully.</string>
	<string name="spot_post_failed">Post failed. Dont\'t worry, We will try after sometime.</string>
	<string name="spot_post_failed_no_internet">Oops No Internet, We will try when its back :)</string>
	<string name="spot_fetch_failed">Oops Failed to load Spots :(</string>
	<string name="close">Close</string>
	<string name="hi5">Hi5</string>
	<string name="comment">Comment</string>
	<string name="cancel">Cancel</string>
	<string name="share">Share</string>
	<string name="done">Done</string>
	<string name="add_caption">      Write Image Caption ..    </string>
	<string name="enter_title">Enter Title</string>
	<string name="spot_url_not_found_message">Hey Chekout this cool spot @ http://spotchu.com</string>
	<string name="spot_url_share_message">Hey Chekout this cool spot @ </string>
	<string name="past_activity">Live Spots</string>
	<string name="pending_activity">Pending Spots</string>
	<string name="my_spots">My Spots</string>
	<string name="profile">Profile</string>
	<string name="my_circle">My Gang</string>
	<string name="explore">Explore</string>
	<string name="share_via">Share via..</string>
	<string name="operation_failed">Oops Operation Failed :( </string>
	<string name="your_day_today">Checkout, What was happening around you all day.</string>
	<string name="new_spot">Just spotted near you, </string>
	<string name="facebook_app_id">775540655859682</string>
	<string name="logout">Logout</string>
	<string name="logout_failed">Logout Failed :(</string>
	<string name="logout_msg">Logging Out..</string>
	<string name="login_msg">Logging In...</string>
	<string name="required_desc">You forgot to give your spot a name.</string>
	<string name="required_comment">Please enter a comment.</string>
	<string name="no_spots">Yet to post anything :(</string>
	
	<string name="setting_anonymous">setting_anonymous</string>
	<string name="setting_anonymous_title">Post as Anonymous</string>
	<string name="hi5_v">Hi5 and</string>
	<string name="comment_v">Comments.</string>
	<string name="prefs_privacy_policy">Privacy policy</string>
	<string name="settings">Settings</string>
	<string name="prefs_terms">Terms Of Use</string>
	<string name="prefs_more_info">More Information</string>
	<string name="view_more">View More</string>
	<string name="get_started">Get Started</string>
	<string name="follow">Follow</string>
	<string name="following">Following</string>
	<string name="followers">Followers</string>
	<string name="start_following">Popular Users Near you.</string>

</resources>
